completed assignment to best of my ability given that the underlying service providing financial data changed.

--- a/mec-3.4.1-api-mini-project/api_data_wrangling_mini_project.ipynb
+++ b/mec-3.4.1-api-mini-project/api_data_wrangling_mini_project.ipynb
@@ -23,14 +23,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Store the API key as a string - according to PEP8, constants are always named in all upper case\n",
-    "API_KEY = ''"
+    "API_KEY = 'c_ZHsdwMRyyHsswSxjHB'"
    ]
   },
   {
@@ -79,38 +77,341 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 18,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# First, import the relevant modules\n",
+    "\n",
+    "from urllib import request\n",
+    "import json\n",
+    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 19,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Now, call the Quandl API and pull out a small sample of the data (only one day) to get a glimpse\n",
-    "# into the JSON structure that will be returned\n"
+    "# into the JSON structure that will be returned\n",
+    "\n",
+    "rsp = request.urlopen(f'https://data.nasdaq.com/api/v3/datasets/HKEX/06669/data.json?api_key={API_KEY}')\n",
+    "\n",
+    "body = json.loads(rsp.read().decode('utf8'))\n",
+    "\n",
+    "dataset = body['dataset_data']\n",
+    "\n",
+    "column_names = dataset['column_names']\n",
+    "\n",
+    "# enforce that the column names have not changed\n",
+    "assert(column_names == [\n",
+    "    'Date',\n",
+    "    'Nominal Price',\n",
+    "    'Net Change',\n",
+    "    'Change (%)',\n",
+    "    'Bid',\n",
+    "    'Ask',\n",
+    "    'P/E(x)',\n",
+    "    'High',\n",
+    "    'Low',\n",
+    "    'Previous Close',\n",
+    "    'Share Volume (000)',\n",
+    "    'Turnover (000)',\n",
+    "    'Lot Size'\n",
+    "])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'limit': None,\n",
+       " 'transform': None,\n",
+       " 'column_index': None,\n",
+       " 'column_names': ['Date',\n",
+       "  'Nominal Price',\n",
+       "  'Net Change',\n",
+       "  'Change (%)',\n",
+       "  'Bid',\n",
+       "  'Ask',\n",
+       "  'P/E(x)',\n",
+       "  'High',\n",
+       "  'Low',\n",
+       "  'Previous Close',\n",
+       "  'Share Volume (000)',\n",
+       "  'Turnover (000)',\n",
+       "  'Lot Size'],\n",
+       " 'start_date': '2021-08-24',\n",
+       " 'end_date': '2021-09-17',\n",
+       " 'frequency': None,\n",
+       " 'data': [['2021-09-17',\n",
+       "   14.66,\n",
+       "   None,\n",
+       "   None,\n",
+       "   14.66,\n",
+       "   14.84,\n",
+       "   None,\n",
+       "   15.0,\n",
+       "   14.42,\n",
+       "   14.8,\n",
+       "   770.0,\n",
+       "   11253.0,\n",
+       "   None],\n",
+       "  ['2021-09-16',\n",
+       "   14.8,\n",
+       "   None,\n",
+       "   None,\n",
+       "   14.8,\n",
+       "   14.82,\n",
+       "   None,\n",
+       "   15.68,\n",
+       "   14.46,\n",
+       "   15.4,\n",
+       "   1409.0,\n",
+       "   21086.0,\n",
+       "   None],\n",
+       "  ['2021-09-15',\n",
+       "   15.4,\n",
+       "   None,\n",
+       "   None,\n",
+       "   15.3,\n",
+       "   15.4,\n",
+       "   None,\n",
+       "   16.48,\n",
+       "   15.28,\n",
+       "   16.4,\n",
+       "   1067.0,\n",
+       "   16830.0,\n",
+       "   None],\n",
+       "  ['2021-09-14',\n",
+       "   16.4,\n",
+       "   None,\n",
+       "   None,\n",
+       "   16.36,\n",
+       "   16.4,\n",
+       "   None,\n",
+       "   16.72,\n",
+       "   16.24,\n",
+       "   16.72,\n",
+       "   1258.0,\n",
+       "   20723.0,\n",
+       "   None],\n",
+       "  ['2021-09-13',\n",
+       "   16.72,\n",
+       "   None,\n",
+       "   None,\n",
+       "   16.7,\n",
+       "   16.74,\n",
+       "   None,\n",
+       "   17.54,\n",
+       "   16.68,\n",
+       "   17.56,\n",
+       "   1356.0,\n",
+       "   22971.0,\n",
+       "   None],\n",
+       "  ['2021-09-10',\n",
+       "   17.56,\n",
+       "   None,\n",
+       "   None,\n",
+       "   17.54,\n",
+       "   17.58,\n",
+       "   None,\n",
+       "   17.84,\n",
+       "   17.38,\n",
+       "   17.6,\n",
+       "   790.0,\n",
+       "   13933.0,\n",
+       "   None],\n",
+       "  ['2021-09-09',\n",
+       "   17.6,\n",
+       "   None,\n",
+       "   None,\n",
+       "   17.4,\n",
+       "   17.6,\n",
+       "   None,\n",
+       "   17.76,\n",
+       "   17.38,\n",
+       "   17.62,\n",
+       "   997.0,\n",
+       "   17528.0,\n",
+       "   None],\n",
+       "  ['2021-09-08',\n",
+       "   17.62,\n",
+       "   None,\n",
+       "   None,\n",
+       "   17.62,\n",
+       "   17.68,\n",
+       "   None,\n",
+       "   18.08,\n",
+       "   17.6,\n",
+       "   18.0,\n",
+       "   687.0,\n",
+       "   12201.0,\n",
+       "   None],\n",
+       "  ['2021-09-07',\n",
+       "   18.0,\n",
+       "   None,\n",
+       "   None,\n",
+       "   17.84,\n",
+       "   18.04,\n",
+       "   None,\n",
+       "   18.12,\n",
+       "   17.8,\n",
+       "   18.04,\n",
+       "   630.0,\n",
+       "   11300.0,\n",
+       "   None],\n",
+       "  ['2021-09-06',\n",
+       "   18.04,\n",
+       "   None,\n",
+       "   None,\n",
+       "   17.94,\n",
+       "   18.04,\n",
+       "   None,\n",
+       "   18.24,\n",
+       "   17.8,\n",
+       "   17.98,\n",
+       "   916.0,\n",
+       "   16492.0,\n",
+       "   None],\n",
+       "  ['2021-09-03',\n",
+       "   17.98,\n",
+       "   None,\n",
+       "   None,\n",
+       "   17.94,\n",
+       "   18.0,\n",
+       "   None,\n",
+       "   18.0,\n",
+       "   17.54,\n",
+       "   17.76,\n",
+       "   820.0,\n",
+       "   14628.0,\n",
+       "   None],\n",
+       "  ['2021-09-02',\n",
+       "   17.76,\n",
+       "   None,\n",
+       "   None,\n",
+       "   17.7,\n",
+       "   17.76,\n",
+       "   None,\n",
+       "   18.06,\n",
+       "   17.34,\n",
+       "   17.56,\n",
+       "   1644.0,\n",
+       "   29170.0,\n",
+       "   None],\n",
+       "  ['2021-09-01',\n",
+       "   17.56,\n",
+       "   None,\n",
+       "   None,\n",
+       "   17.46,\n",
+       "   17.56,\n",
+       "   None,\n",
+       "   17.72,\n",
+       "   17.4,\n",
+       "   17.4,\n",
+       "   940.0,\n",
+       "   16489.0,\n",
+       "   None],\n",
+       "  ['2021-08-31',\n",
+       "   17.4,\n",
+       "   None,\n",
+       "   None,\n",
+       "   17.3,\n",
+       "   17.4,\n",
+       "   None,\n",
+       "   17.98,\n",
+       "   17.24,\n",
+       "   17.66,\n",
+       "   1406.0,\n",
+       "   24440.0,\n",
+       "   None],\n",
+       "  ['2021-08-30',\n",
+       "   17.66,\n",
+       "   None,\n",
+       "   None,\n",
+       "   17.66,\n",
+       "   17.68,\n",
+       "   None,\n",
+       "   17.88,\n",
+       "   17.26,\n",
+       "   18.1,\n",
+       "   1820.0,\n",
+       "   32013.0,\n",
+       "   None],\n",
+       "  ['2021-08-27',\n",
+       "   18.1,\n",
+       "   None,\n",
+       "   None,\n",
+       "   18.1,\n",
+       "   18.2,\n",
+       "   None,\n",
+       "   18.7,\n",
+       "   18.1,\n",
+       "   18.6,\n",
+       "   1761.0,\n",
+       "   32177.0,\n",
+       "   None],\n",
+       "  ['2021-08-26',\n",
+       "   18.6,\n",
+       "   None,\n",
+       "   None,\n",
+       "   18.4,\n",
+       "   18.6,\n",
+       "   None,\n",
+       "   19.36,\n",
+       "   18.14,\n",
+       "   18.86,\n",
+       "   5249.0,\n",
+       "   97757.0,\n",
+       "   None],\n",
+       "  ['2021-08-25',\n",
+       "   18.86,\n",
+       "   None,\n",
+       "   None,\n",
+       "   18.86,\n",
+       "   18.88,\n",
+       "   None,\n",
+       "   19.14,\n",
+       "   17.2,\n",
+       "   17.6,\n",
+       "   8915.0,\n",
+       "   163877.0,\n",
+       "   None],\n",
+       "  ['2021-08-24',\n",
+       "   17.6,\n",
+       "   None,\n",
+       "   None,\n",
+       "   17.24,\n",
+       "   17.6,\n",
+       "   None,\n",
+       "   18.38,\n",
+       "   17.0,\n",
+       "   None,\n",
+       "   31056.0,\n",
+       "   552859.0,\n",
+       "   None]],\n",
+       " 'collapse': None,\n",
+       " 'order': None}"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Inspect the JSON structure of the object you created, and take note of how nested it is,\n",
-    "# as well as the overall structure\n"
+    "# as well as the overall structure\n",
+    "\n",
+    "dataset"
    ]
   },
   {
@@ -130,17 +431,203 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Helpers\n",
+    "\n",
+    "def column_array(name):\n",
+    "    index = column_names.index(name)\n",
+    "    \n",
+    "    return [row[index] for row in dataset['data']]\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lowest  opening price: 14.8, 2021-09-17\n",
+      "highest opening price: 18.86, 2021-08-26\n"
+     ]
+    }
+   ],
+   "source": [
+    "from functools import reduce\n",
+    "\n",
+    "# 3) Highest and lowest opening prices\n",
+    "assert(0 < len(dataset['data']))\n",
+    "\n",
+    "# Concatenate date, and previous close columns\n",
+    "prices = zip(\n",
+    "    column_array('Date'), \n",
+    "    column_array('Previous Close')\n",
+    ")\n",
+    "\n",
+    "# Remove None\n",
+    "no_none = filter(lambda x: None not in x, prices)\n",
+    "\n",
+    "# Helper function to simultaneously find the min and max values\n",
+    "# while carrying their dates\n",
+    "def separate(min_max, item):\n",
+    "    if None is min_max:\n",
+    "        return (item, item)\n",
+    "    else:\n",
+    "        min_item, max_item = min_max\n",
+    "    \n",
+    "        return (\n",
+    "            min(min_item, item, key=lambda x: x[1]),\n",
+    "            max(max_item, item, key=lambda x: x[1]))\n",
+    "    \n",
+    "\n",
+    "# Apply helper function to find min and max open prices\n",
+    "(min_date, min_price), (max_date, max_price) = reduce(separate, no_none, None)\n",
+    "\n",
+    "print(f'lowest  opening price: {min_price}, {min_date}')\n",
+    "print(f'highest opening price: {max_price}, {max_date}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "largest price change of 1.9400000000000013 occured on 2021-08-25\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 4) What was the largest change in any one day (based on High and Low price)?\n",
+    "\n",
+    "# verticaly concatenate date, high and low columns, and remove rows\n",
+    "# that have None\n",
+    "prices = filter(\n",
+    "    lambda x: None not in x, \n",
+    "    zip(\n",
+    "        column_array('Date'), \n",
+    "        column_array('High'), \n",
+    "        column_array('Low')\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "\n",
+    "# Compute the price range\n",
+    "prices = (\n",
+    "    (date, high-low) for date, high, low in prices\n",
+    ")\n",
+    "\n",
+    "date, largest_change = max(prices, key=lambda x: x[1])\n",
+    "\n",
+    "print(f'largest price change of {largest_change} occured on {date}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "largest change b/w two days was -1.259999999999998 on 2021-08-25\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 5) What was the largest change between any two days (based on Closing Price)?\n",
+    "\n",
+    "import typing\n",
+    "\n",
+    "prices = filter(\n",
+    "    lambda x: None not in x, \n",
+    "    zip(\n",
+    "        column_array('Date'), \n",
+    "        column_array('Previous Close')\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "\n",
+    "def largest_change_func(acc, current_item):\n",
+    "\n",
+    "    class Acc(typing.NamedTuple):\n",
+    "        last_item: typing.Tuple[str, float] \n",
+    "        largest_change: typing.Tuple[str, float]\n",
+    "\n",
+    "\n",
+    "    if None is acc:\n",
+    "        return Acc(current_item, None)\n",
+    "    else:\n",
+    "        change = current_item[1] - acc.last_item[1]\n",
+    "        \n",
+    "        #print('change: %f %s'%(change, current_item[0]))\n",
+    "        \n",
+    "        if None is acc.largest_change or \\\n",
+    "           abs(change) > abs(acc.largest_change[1]): \n",
+    "            return Acc(current_item, (current_item[0], change))\n",
+    "        else:\n",
+    "            return Acc(current_item, acc.largest_change)\n",
+    "\n",
+    "acc = reduce(largest_change_func, prices, None)\n",
+    "\n",
+    "date, price_change = acc.largest_change\n",
+    "\n",
+    "print(f'largest change b/w two days was {price_change} on {date}')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "average daily trading volume was: 3341.6315789473683\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 6) What was the average daily trading volume during this year?\n",
+    "\n",
+    "volume = list(\n",
+    "    filter(\n",
+    "        lambda x: None is not x, \n",
+    "        column_array(\n",
+    "            'Share Volume (000)'\n",
+    "        )\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "\n",
+    "avg = sum(volume) / len(volume)\n",
+    "\n",
+    "print(f'average daily trading volume was: {avg}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -154,7 +641,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
