--- a/mec-3.4.1-api-mini-project/api_data_wrangling_mini_project.ipynb
+++ b/mec-3.4.1-api-mini-project/api_data_wrangling_mini_project.ipynb
@@ -509,7 +509,7 @@
    "source": [
     "# 4) What was the largest change in any one day (based on High and Low price)?\n",
     "\n",
-    "# verticaly concatenate date, high and low columns, and remove rows\n",
+    "# horizontally concatenate date, high and low columns, and remove rows\n",
     "# that have None\n",
     "prices = filter(\n",
     "    lambda x: None not in x, \n",
